infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hostile-tweets-ex-service
spec:
  selector:
    app: hostile-tweets-ex
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
