infra/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hostile-tweets-ex-route
spec:
  to:
    kind: Service
    name: hostile-tweets-ex-service
  port:
    targetPort: 8000
